# Image-Processor

./: .tester.json  CMakeLists.txt  image_processor  image_processor.cpp  image_processor_unit_tester.cpp  image_processor_unit_tester.h  readme.md  test.cpp
Exceptions/: Exceptions.h
Filters/: Filters.cpp
ImageLoaders/: ImageLoader.h
Parser/: Parser.cpp  Parser.h
cmake/: BuildFlags.cmake  FindCatch.cmake  TestSolution.cmake
contrib/catch/: catch.hpp  catch_main.cpp
src/: CMakeLists.txt  image_processor.cpp  test.cpp  test_image_processor.cpp  test_image_processor.h
src/Exceptions/: Exceptions.cpp  Exceptions.h
src/Filters/: Filters.cpp  Filters.h  ImageProcessor.cpp  ImageProcessor.h
src/Image/: Image.cpp  Image.h
src/ImageLoaders/: BMPLoader.cpp  BMPLoader.h  ImageLoader.cpp  ImageLoader.h
src/Parser/: Parser.cpp  Parser.h
